src/objects/Error_Messages__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This object will hold all the error messages that are being used in the codes.</description>
    <fields>
        <fullName>Apex_Class_Trigger_Name__c</fullName>
        <label>Apex Class/Trigger Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Provide description of the error message.

Example:
Displays when the user trying to insert a Contact record with an exception error.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>The error message.</description>
        <label>Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <description>The name of the method or function within the class.</description>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Messages</label>
</CustomObject>